Bug 1067207 - Compute imgFrame padding in unscaled coordinates. r=tn